Partial_14Dec2021/force-app/main/default/objects/Point__c/Point__c.object-meta.xml
<CustomObject>
    <label>Point</label>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Point</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>