Partial_14Dec2021/force-app/main/default/objects/Point__c/fields/From_account__c.field-meta.xml
<CustomField>
    <fullName>From_account__c</fullName>
    <label>From account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>