Partial_14Dec2021/force-app/main/default/objects/Point__c/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <label>Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>