Partial_14Dec2021/force-app/main/default/objects/Point__c/fields/Identifier_Id__c.field-meta.xml
<CustomField>
    <fullName>Identifier_Id__c</fullName>
    <label>Identifier Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>