Partial_14Dec2021/force-app/main/default/objects/Point__c/fields/Points_Value__c.field-meta.xml
<CustomField>
    <fullName>Points_Value__c</fullName>
    <formula>IF(  ISPICKVAL(Type__c, &apos;CREDIT&apos;),  Point__c , Point__c * -1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Points Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>