Partial_14Dec2021/force-app/main/default/objects/Point__c/fields/To_account__c.field-meta.xml
<CustomField>
    <fullName>To_account__c</fullName>
    <label>To account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>