Partial_14Dec2021/force-app/main/default/objects/Point__c/fields/To_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>To_Account_Id__c</fullName>
    <label>To Account Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>