Partial_14Dec2021/force-app/main/default/objects/Point__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Point</relationshipLabel>
    <relationshipName>Point</relationshipName>
    <type>Lookup</type>
</CustomField>