Partial_14Dec2021/force-app/main/default/objects/Point__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CREDIT</fullName>
            </value>
            <value>
                <fullName>DEBIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>