Partial_14Dec2021/force-app/main/default/objects/Point__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IEP_Influencer__c</columns>
    <columns>Point__c</columns>
    <columns>Transaction__c</columns>
    <columns>From_account__c</columns>
    <columns>To_account__c</columns>
    <columns>Identifier__c</columns>
    <columns>Module__c</columns>
    <columns>To_Account_Id__c</columns>
    <columns>From_Account_Id__c</columns>
    <columns>Identifier_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>